test: 메뉴 추가 이미지 테스트 추가